<resources>
    <string name="app_name">Buddies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (min 6)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="web_client_id">392609190134-md16nkbipujdf1qv6ruu1krkgs35mnjb.apps.googleusercontent.com</string>
    <string name="action_title_sign_out">Sign Out</string>
    <string name="facebook_app_id">326376017783700</string>
    <string name="facebook_application_id">326376017783700</string>
    <string name="navigation_string_following">Following</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_title_settings">Settings</string>
    <string name="action_title_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_email_hint">Email</string>
    <string name="navigation_string_places">Places</string>
    <string name="navigation_string_home">Home</string>
    <string name="action_title_requests">Requests</string>
    <string name="title_activity_requests">Requests</string>
    <string name="title_activity_newpet">New Buddy</string>
    <string name="email_edit_button_description">Email edit button</string>
    <string name="name_edit_button_description">Name edit button</string>
    <string name="tag_options_dialog_title">TAG Scan</string>
    <string name="tag_options_dialog_message">A new Buddy Tag was detected, what do you want to do?</string>
    <string name="tag_options_dialog_follow_button">Follow Buddy</string>
    <string name="tag_options_dialog_new_button">Add new Buddy</string>
    <string name="request_toast_sent_message">Request sent!</string>
    <string name="activity_title_buddy_profile">Buddy</string>
    <string name="request_description">requested to be owner of </string>
    <string name="decline_button_text">Decline</string>
    <string name="accept_button_text">Accept</string>
    <string name="title_activity_place">Place</string>
    <string name="friendly_items_title">Friendly Items</string>
    <string name="place_description_title">Description</string>
    <string name="place_address_title">Address</string>
    <string name="place_phone_title">Phone</string>
    <string name="new_pet_name_hint">Pet Name</string>
    <string name="title_activity_suggest_place">Suggest Place</string>
    <string name="request_toast_already_owns">You already own this buddy</string>
    <string name="post_message_hint">What would your Buddy say?</string>

    <string name="title_activity_fullscreen_photo">FullscreenPhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_comments">Comments</string>
    <string name="new_comment_hint">Write a comment</string>
    <string name="title_activity_tab_example">TabExampleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_string_profile">Profile</string>
</resources>
