<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_profile"
        android:title="@string/action_title_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_requests"
        android:title="@string/action_title_requests"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_title_sign_out"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_title_settings"
        app:showAsAction="never"/>
</menu>