<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_picture_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.felipeacerbi.buddies.activities.PlaceActivity"
    tools:showIn="@layout/activity_place">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_picture_background">

        <LinearLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="#FFFFFF"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/friendly_items_title"/>
            <LinearLayout
                android:id="@+id/friendly_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/progress_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/progress_number"
                    android:layout_alignTop="@id/progress_number"
                    android:layout_marginEnd="8dp"
                    style="@android:style/Widget.Material.ProgressBar.Horizontal" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/address_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="2dp"
            android:background="#FFFFFF"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/items"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/maps_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_map_black_24dp"
                android:paddingStart="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/place_address_title"/>
            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_title"
                android:layout_toStartOf="@id/maps_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="2dp"
            android:background="#FFFFFF"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/address_row"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/phone_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phone_black_24dp"
                android:paddingStart="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/place_phone_title"/>
            <TextView
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_title"
                android:layout_toStartOf="@id/phone_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/website_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="2dp"
            android:background="#FFFFFF"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/phone_row"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/website_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_open_in_browser_black_24dp"
                android:paddingStart="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/website_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="Website"/>
            <TextView
                android:id="@+id/website_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/website_title"
                android:layout_toStartOf="@id/website_button"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:elevation="2dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/website_row"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/place_description_title"/>
            <TextView
                android:id="@+id/place_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>
